observability/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: devops-app
spec:
  podSelector:
    matchLabels:
      app: devops-app
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - { protocol: TCP, port: 5000 }
        - { protocol: TCP, port: 8080 }
        - { protocol: TCP, port: 9100 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape-jenkins
  namespace: jenkins
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - { protocol: TCP, port: 8080 }
